# gotify-auth-proxy

./: Cargo.toml  Dockerfile
src/: main.rs
