[package]
name = "gotify-auth-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
reqwest = "0.11.11"
config = "0.13.1"
serde = "1.0"
serde_derive = "1.0"
# Vendored openssl for musl build
openssl = { version = "0.10.40", features = ["vendored"] }

[profile.release]
lto = "yes"